tests/ui/macros/expr_2024_underscore_expr.edi2021.stderr
error: no rules expected the token `_`
  --> $DIR/expr_2024_underscore_expr.rs:22:12
   |
LL | macro_rules! m2021 {
   | ------------------ when calling this macro
...
LL |     m2021!(_);
   |            ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$e:expr_2021`
  --> $DIR/expr_2024_underscore_expr.rs:10:6
   |
LL |     ($e:expr_2021) => {
   |      ^^^^^^^^^^^^

error: no rules expected the token `_`
  --> $DIR/expr_2024_underscore_expr.rs:23:12
   |
LL | macro_rules! m2024 {
   | ------------------ when calling this macro
...
LL |     m2024!(_);
   |            ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$e:expr`
  --> $DIR/expr_2024_underscore_expr.rs:16:6
   |
LL |     ($e:expr) => {
   |      ^^^^^^^

error: aborting due to 2 previous errors

